# dwrandomizer

./: .gitignore  CHANGELOG.md  CMakeLists.txt  DWRandomizer.ini  LICENSE  Makefile  README.md  build.h  compile_commands.json  custom_random.py  dwr.c  dwr.h  dwr_types.h  dwrando-cli.c  dwrandomizer-cli.pro  dwrandomizer.pro  dwrandomizer.ps1  dwrandomizer.py  hud.lua  ips.py  map.c  map.h  mt19937-64.c  mt64.h  randomizer_gui.py  release.sh  setup.py  worldmap.py
cli/: main.c
common/: build.h  challenge.c  challenge.h  chaos.c  chaos.h  chests.c  chests.h  crc64.h  credit_music.c  credit_music.h  dungeon_maps.c  dungeon_maps.h  dwr.c  dwr.h  dwr_types.h  expansion.c  expansion.h  flute_music.c  flute_music.h  map.c  map.h  mt19937-64.c  mt64.h  patch.c  patch.h  polyfit.c  polyfit.h  sprites.c  sprites.h  stair_shuffle.c  stair_shuffle.h
electron/: .gitignore  base32.js  dwrandomizer.js  dwrandomizer.wasm  index.css  index.html  index.js  interface.js  main.js  modal.js  package-lock.json  package.json  preload.js  sprites
emscripten/: base32.js  index.css  index.html  index.js
expansion/: bank_0.asm  bank_3.asm  bank_3_patch.asm  bank_4.asm  bank_5.asm  bank_7.asm  base.asm  build.sh  chr_rom.chr  credit_start.asm  credits.asm  defs.asm  empty.asm  exp_bank_3.asm  exp_bank_4.asm  exp_bank_5.asm  famistudio_asm6.asm  famistudio_conf.asm
expansion/music/: 1943.fms  43.txt  A_Rock_Show_on_Elm_Street.fms  All_Hail_The_Sea_Cucumber.fms  BoF2_Fishing.fms  Cave_Story_-_The_Way_Back_Home.fms  Cave_Story_Running_Hell.fms  Chrono_Cross_Another_Guldove.fms  Chrono_Trigger_Corridors_of_Time.fms  Excellent_Dance_Move.fms  FFMQ_Lava_Dome.fms  FFV_The_Dragon_Spreads_its_Wings.fms  Final_Fantasy_6_Devil_s_Lab.fms  Guard_Daos.fms  Kero_Blaster_It_s_My_Blaster.fms  Mario_Kart_64_Royal_Raceway.fms  Mr_Big_Daddy_Brother_Lover_Little_boy_The_Electric_Drill_Song.fms  Pourquoi_noix.fms  Rainbow_Road.fms  Sated.fms  Sea_of_Stars_-_Dance_of_1000_Suns.fms  Sea_of_Stars_Trials_in_the_Mist.fms  Shovel_Knight_A_Thousand_Leagues_Below.fms  Snailiad_Ending_Part_2.fms  Spark_Woman.fms  Suspicious_Arpeggios.fms  Uncertain_But_Positive.fms  Undertale_Another_Medium.fms  You_and_Your_Frog_Are_Dead.fms  bat.asm  bat.dmc  bat.txt  batman.fms  bayou.fms  bloody.txt  bubble.asm  bubble.txt  bubble_man.fms  danger_and_determination.fms  danger_and_determination.txt  (+39 more)
legacy/: pathfinding.py  randomizer_gui.py  worldmap.py
linux/: CMakeLists.txt
msvc/: DwRandomizer.sln  DwRandomizer.vcxproj  DwRandomizer.vcxproj.filters
notes/: dialogue.txt  enemy_data.txt  free_space.txt  items.txt  maps.txt  music.txt  ram.txt  rom.txt  sprites.txt  warps.txt
resources/: dwrandomizer.desktop
tools/: build_expansion.py  build_music.py  ips.py  patchgen.py  polyfit.py  spritecode.py
tools/curve_data/: mon_agi.txt  mon_dodge.txt  mon_gold.txt  mon_hp.txt  mon_hr.txt  mon_sleep.txt  mon_stop.txt  mon_str.txt  mon_xp.txt  player_agi.txt  player_hp.txt  player_mp.txt  player_str.txt  player_xp.txt  vanilla_stats.txt  weapons.txt
ui/: CMakeLists.txt  main-window.cpp  main-window.h  main.cpp  ui_main.cpp  widgets.cpp  widgets.h
webui/: base32.js  index.css  index.html  index.js  interface.js  js13kpwa.webmanifest  modal.js
win32/: CMakeLists.txt
